--- a/style.css
+++ b/style.css
@@ -89,8 +89,10 @@ body {
 }
 
 .button-container {
-    width: 300px;
+    width: 100%;
+    display: flex;
     justify-content: center;
+    margin-top: 20px;
 }
 
 /* Estilos de entrada de texto */
