--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ ul {
 .button-draw {
     display: flex;
     align-items: center;
-    width: 200%;
+    width: 250px;
     padding: 10px 40px;
     color: var(--color-white);
     background-color: var(--color-button);
